<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bekzad.cryptotracker.ui.coins.CoinsViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/header_cl"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/primaryColor"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/position_tv"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/position_number"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:id="@+id/symbol_tv"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/symbol_header_text"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/price_header_text"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:id="@+id/price_change_tv"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/price_change_header_text"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:id="@+id/market_cap_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/market_cap_header_text"
                android:textColor="@color/primaryTextColor" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/coins_list_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryDarkColor"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:listData="@{viewModel.coins}"
                tools:listitem="@layout/list_view_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>